# wgsl_lsp

./: Cargo.toml  readme.md
client_vs/: CHANGELOG.md  README.md  language-configuration.json  package.json  pnpm-lock.yaml
client_vs/src/: extension.ts
client_vs/syntaxes/: wgsl.tmLanguage.json
src/: backend.rs  main.rs  parser.rs
